# reader

./: .clang-format  CMakeLists.txt  README.md
scripts/: build.sh  generate.py
src/: Reader.cpp  Reader.h  Semaphore.cpp  Semaphore.h  ThreadPool.cpp  ThreadPool.h  UniqueWordsCounter.cpp  UniqueWordsCounter.h  Utils.cpp  Utils.h  main.cpp
test/: UtilsTest.cpp
